@@ -145,6 +145,10 @@ Bug fixes
 
 * LUCENE-5704: Fix compilation error with Java 8u20.  (Uwe Schindler)
 
+* LUCENE-5710: Include the inner exception as the cause and in the
+  exception message when an immense term is hit during indexing (Lee
+  Hinman via Mike McCandless)
+
 Test Framework
 
 * LUCENE-5622: Fail tests if they print over the given limit of bytes to 
